@@ -1,0 +1,15 @@
+<?php
+/**
+ * Internationalisation file for PageRestrictions extension.
+ *
+ * $Id$
+ * 
+*/
+
+PageRestrictionsClass::$msg['en'] = array(
+'restriction-read'		=>    'Read',
+'restriction-raw' 		=>    'Raw',
+'restriction-viewsource'=>    'Viewsource',
+#'' => '',
+);
+?>
